agregue en pacJson script start

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "maquetado2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "gi",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3"
-  }
+    "name": "maquetado2",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
+    },
+    "author": "gi",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.3"
+    }
 }
